gke-nginx-kong/deploy-microsvc-static-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: nginx-ingress
  labels:
    app: deploy-microsvc-static-1
  name: deploy-microsvc-static-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-microsvc-static-1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deploy-microsvc-static-1
    spec:
      containers:
      - image: niranjanv64/microsvc-static-1:v6
        name: microsvc-static-1
        ports:
        - containerPort: 7050
          #"-Xlog:gc*" , "-Xlog:task*=debug","-Xlog:gc+heap=trace", "-Xlog:ref*=debug","-Xlog:stringdedup*=debug","-Xlog:age*=debug",
        args: ["-javaagent:./app/jmx_prometheus_javaagent-0.16.1.jar=8080:/app/config.yaml", "-XX:MaxRAMPercentage=75.0", "-Xloggc:/opt/mygc.log", "-XX:+PrintFlagsFinal","-Dspring.config.location=/opt/config/application.yml","com.microsvc.static1.Static1Application"] 
        # niranjanv64/microsvc-static1:v1 conatins a app.yaml file inside and is overridden by configMap
        #-Dapp.env.servUrl1=http://192.168.0.111:7051/microsvc-static-2
        resources:
         limits:
            cpu: 1000m
            memory: 1Gi
         requests:
            cpu: 100m
            memory: 500Mi
        #resources: {}
        volumeMounts:
          - name: cm-microsvc-static-1
            mountPath: /opt/config
      volumes:
        - name: cm-microsvc-static-1
          configMap:
            name: cm-microsvc-static-1
status: {}
