gke-nginx-kong/ingress-for-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"nginxc3-niranjanv12-dev","namespace":"ingress-nginx","uid":"13dafb95-98c0-490e-baa2-d0ca3366ed9d"},"spec":{"ingressClassName":"nginx","rules":[{"host":"nginxc3.niranjanv12.dev","http":{"paths":[{"backend":{"service":{"name":"kong-1658498059-kong-proxy","port":{"number":80}}},"path":"/api3","pathType":"Im [...]
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2022-07-22T14:12:41Z"
  generation: 12
  name: nginxc3-niranjanv12-dev
  namespace: ingress-nginx
  resourceVersion: "6357978"
  uid: 13dafb95-98c0-490e-baa2-d0ca3366ed9d
spec:
  ingressClassName: nginx
  rules:
  - host: nginxc3.niranjanv12.dev
    http:
      paths:
      - backend:
          service:
            name: kong-1658498059-kong-proxy
            port:
              number: 80
        path: /api3
        pathType: ImplementationSpecific
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - nginxc3.niranjanv12.dev
    secretName: nginxc3-niranjanv12-dev
status:
  loadBalancer:
    ingress:
    - ip: 35.202.18.159
